# maturin-example

./: Cargo.toml
.github/workflows/: CI.yml
src/: lib.rs
