[package]
name = "maturin-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "maturin_example"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.13.1", features = ["extension-module"] }
